--- a/web/front/less/eduspeak/profile.less
+++ b/web/front/less/eduspeak/profile.less
@@ -29,7 +29,7 @@
 		}
 		.profil-icon{
 			text-align: center;
-			.fa-user-plus {
+			.fa-user-plus, .fa-envelope-o{
 				color: @eduspeak-base-purple;
 			}
 		}
