--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -1,5 +1,11 @@
 {% trans_default_domain 'FOSUserBundle' %}
-
+{% for type, messages in app.session.flashbag.all() %}
+    {% for message in messages %}
+        <div class="flash-{{ type }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endfor %}
 <div id="edu-profile" class="fos_user_user_show full-height">
     <div class="row profil-banner">
         <div class="col-md-12">
