--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -68,7 +68,7 @@
         <div id="choixDestination" class="row">
             <div class="row col-md-offset-2 col-md-8 text-center">
                 {% set count = citiesSuggested|length %}
-                <h2>Suggestions de villes qui parlent {{ language.name }}</h2>
+                <h2>Suggestion de villes</h2>
                 {% for city in citiesSuggested %}
                 {% if loop.index % count == 0  and count % 2 != 0 %}
                 <div class="row col-md-12 center-block">
