--- a/src/EduSpeakBundle/Resources/views/Match/match.html.twig
+++ b/src/EduSpeakBundle/Resources/views/Match/match.html.twig
@@ -77,7 +77,7 @@
         {% else %}
         <div class="row content">
             <h1 class="title">{{ city.countryCity }}</h1>
-            <h3 class="title friends-empty">No one suits your request</h3>
+            <h3 class="title friends-empty">Personne dans cette ville</h3>
         </div>
         {% endif %}
         <script>
