--- a/web/front/less/eduspeak/profile.less
+++ b/web/front/less/eduspeak/profile.less
@@ -33,7 +33,7 @@
 				color: @eduspeak-base-purple;
 			}
 		}
-		img{
+		.img-profil{
 			margin-bottom: 0;
 			width: 20rem;
 		}
@@ -64,40 +64,39 @@
 	}
 }
 
-#edu-profile-row {
-	margin-top: 3em;
-	.profil-details{
-		background-color: white;
-		opacity: 0.9;
-		box-shadow: @gray-border 1px 1px 1px 1px;
-		margin-bottom: 5em;
-		padding: 1em;
-		ul{
-			list-style: none;
-			padding: 0;
-		}
-		p{
-			text-align: justify;
-		}
-		h4{
-			overflow: hidden;
-		}
-		i{
-			overflow: hidden;
-		}
-		#user_cityPrecision, #user_city, #user_description {
-			width: 100%;
-		}
-		#user_interests {
-			label {
-				padding: 0 @size-px-15 0 @size-px-5;
-			}
+.profil-details{
+	background-color: white;
+	opacity: 0.9;
+	box-shadow: @gray-border 1px 1px 1px 1px;
+	margin-bottom: 3em;
+	padding: 1em;
+	ul{
+		list-style: none;
+		padding: 0;
+	}
+	p{
+		text-align: justify;
+	}
+	h4{
+		overflow: hidden;
+	}
+	i{
+		overflow: hidden;
+	}
+	#user_cityPrecision, #user_city, #user_description {
+		width: 100%;
+	}
+	#user_interests {
+		label {
+			padding: 0 @size-px-15 0 @size-px-5;
 		}
 	}
-	.visited-list{
-		img{
-			width: 3em;
-		}
+}
+
+.flags{
+	img{width: 1.5em;}
+	span{
+		margin-right: 0.5em;
 	}
 }
 
