--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -7,19 +7,42 @@
     {% endfor %}
 {% endfor %}
 <div id="edu-profile" class="fos_user_user_show full-height">
-    <div class="row profil-banner">
-        <div class="col-md-12">
-            <img src="http://1010uk.a.cdnify.io/cdn/farfuture/b4EDw936Zxf-JgbAyWkDWT052-ildkqGN03gc7CD4fQ/mtime:1433946444/sites/default/files/eiffel-tower-cameron-wears-BY-NC-banner.jpg"/>
-        </div>
-    </div>
     <div id="edu-profile-top" class="row">
         <div class="col-md-3 col-xs-3">
             <div class="profil-contact container">
                 <div class="row">
-                    <img src="{{ image }}" alt="Photo" />
+                    <img src="{{ image }}" alt="Photo" class="img-profil" />
                 </div>
                 <div class="row">
                     <h3 class="profil-name">{{ user.username }}</h3>
+                </div>
+                <div class="profil-details row">
+                    {% if user.city is not null and user.birthday is not null %}
+                        <ul>
+                            {% if user.birthday %}
+                            <li>
+                                <h4>Age</h4>
+                                <i>{{ user.age }}</i>
+                            </li>
+                            {% endif %}
+                            {% if user.city %}
+                            <li>
+                                <h4>City</h4>
+                                <i>{{ user.city.countryCity }}</i>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    {% endif %}
+                    {% if user.spokenLanguages is not empty %}
+                        <div class="flags">
+                            <h4>Speaking</h4>
+                            {% for spokenLanguage in user.spokenLanguages %}
+                                <span>
+                                    <img src="{% path spokenLanguage.flag, 'small' %}" alt="{{ spokenLanguage.name }}">
+                                </span>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
                 </div>
                 {% if app.user.id == user.id %}
                 <div class="row">
@@ -28,118 +51,62 @@
                 {% else %}
                 <div class="row profil-icon">
                     {% if isFriend %}
-                    <a href="{{path('chat_create',{'id':user.id})}}"><i class="fa fa-envelope-o fa-2x col-md-12"></i></a>
+                        <a href="{{path('chat_create',{'id':user.id})}}"><i class="fa fa-envelope-o fa-2x col-md-12"></i></a>
                     {% else %}
-                    <a href="{{path('chat_create',{'id':user.id})}}"><i class="fa fa-envelope-o fa-2x col-md-6"></i></a>
-                    <a href="{{ path('edu_speak_add_friend',{'id':user.id})}}"><i class="fa fa-user-plus fa-2x col-md-6"></i></a>
+                        <a href="{{path('chat_create',{'id':user.id})}}"><i class="fa fa-envelope-o fa-2x col-md-6"></i></a>
+                        <a href="{{ path('edu_speak_add_friend',{'id':user.id})}}"><i class="fa fa-user-plus fa-2x col-md-6"></i></a>
                     {% endif %}
                 </div>
                 {% endif %}
             </div>
         </div>
-        <div class="col-md-8 col-md-offset-1 col-xs-6 col-xs-offset-3 profil-listing">
-            <div class="container">
-                <div class="row">
-                    {% if user.spokenLanguages is not empty %}
-                    <div class="col-md-12 col-xs-12 profil-language">
-                        <h4>I can speak</h4>
-                        <ul>
-                            {% for spokenLanguage in user.spokenLanguages %}
-                            <li>
-                                <div class="country-snippet">
-                                    <img src="{% path spokenLanguage.flag, 'small' %}" alt="{{ spokenLanguage.name }}">
-                                </div>
-                                {{ spokenLanguage.name }}
-                            </li>
-                            {% endfor %}
-                        </ul>
+        <div class="col-md-9">
+            <div class="row">
+                <div class="col-md-8 col-xs-8">
+                    {% if user.description %}
+                    <div class="col-md-12">
+                        <h4>Description</h4>
+                        <p>
+                            <i>{{ user.description }}</i>
+                        </p>
                     </div>
                     {% endif %}
-                    {% if user.learnLanguage is not null %}
-                    <div class="col-md-12 col-xs-12 profil-language">
-                        <h4>I wish to speak</h4>
-                        <ul>
-                            <li>
-                                <div class="country-snippet">
-                                    <img src="{% path user.learnLanguage.flag, 'small' %}" alt="{{ user.learnLanguage.name }}">
-                                </div>
-                                {{ user.learnLanguage.name }}
-                            </li>
-                        </ul>
-                    </div>
-                    {% endif %}
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="edu-profile-row" class="container">
-        <div class="row">
-            {% if user.city is not null and user.birthday is not null %}
-            <div class="col-md-2 col-xs-2">
-                <div class="profil-details">
-                    <ul>
-                        {% if user.birthday %}
-                        <li>
-                            <h4>Age</h4>
-                            <i>{{ user.age }}</i>
-                        </li>
-                        {% endif %}
-                        {% if user.city %}
-                        <li>
-                            <h4>City</h4>
-                            <i>{{ user.city.countryCity }}</i>
-                        </li>
-                        {% endif %}
-                    </ul>
-                </div>
-            </div>
-            {% endif %}
-            {% if user.interests is not empty and user.description is not null %}
-            <div class="col-md-5 col-xs-5">
-                <div class="profil-details">
-                    <ul>
-                        {% if user.description %}
-                        <li>
-                            <h4>Description</h4>
-                            <p>
-                                <i>{{ user.description }}</i>
-                            </p>
-                        </li>
-                        {% endif %}
-                        {% if user.interests is not empty %}
-                        <li>
-                            <h4>Interests</h4>
-                            <i>{% for interest in user.interests %}{% if loop.last %}{{ interest.name }}{% else %}{{ interest.name }}, {% endif %}{% endfor %}</i>
-                        </li>
-                        {% endif %}
-                    </ul>
-                </div>
-            </div>
-            {% endif %}
-            {% if user.visitedCities is not empty %}
-            <div class="col-md-5 col-xs-5">
-                <div class="profil-details row">
-                    <ul>
-                        <li class="col-md-6 col-xs-6">
+                    {% if user.visitedCities is not empty %}
+                        <div class="col-md-12 col-xs-12">
                             <h4>Visited Cities</h4>
                             <ul class="visited-list">
                                 {% for city in user.visitedCities %}
-                                <li>
+                                {#}<li>
                                     <img src="{% path city.country.flag, 'small' %}" alt="{{ city.countryCity }}"> {{ city.countryCity }}
-                                </li>
+                                </li>#}
                                 {% endfor %}
                             </ul>
-                        </li>
-                    </ul>
+                        </div>
+                    {% endif %}
+                </div>
+                <div class="col-md-4 col-xs-4">
+                    {% if user.interests is not empty %}
+                    <div class="col-md-12">
+                        <h4>Interests</h4>
+                        <i>{% for interest in user.interests %}{% if loop.last %}{{ interest.name }}{% else %}{{ interest.name }}, {% endif %}{% endfor %}</i>
+                    </div>
+                    {% endif %}
+                    {% if user.learnLanguage is not null %}
+                        <div class="col-md-12">
+                            <h4>Currently learning</h4>
+                            <div class="country-snippet">
+                                <img src="{% path user.learnLanguage.flag, 'small' %}" alt="{{ user.learnLanguage.name }}">
+                            </div>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
-            {% endif %}
         </div>
     </div>
 </div>
 <script>
     if(window.location.hostname !== 'localhost'){
-        mixpanel.track("Profile "+{{user.username}});
+        mixpanel.track("Profile "+{{app.user.username}});
     }else{
         console.log("fake mixpanel localhost");
     }
