Array push fixed

--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -79,15 +79,15 @@ img {
 
 ///CUSTOMISATION DE LA PAGE DACCUEIL
 .accueil{
-  #choixDestination{
-    .thumbnail {
-      &:hover{
-      img{
-          opacity: 0.7;
+      #choixDestination{
+        .thumbnail {
+          &:hover{
+          img{
+              opacity: 0.7;
+              }
           }
+        }
       }
-    }
-  }
     //block noir pour le caroussel
     .monopacite{
       background-color: black;
@@ -98,8 +98,11 @@ img {
       opacity: 0.4;
     }
 
-  //Le slogan de speakit
-  .slogan{
+    //Le slogan de speakit
+    .slogan{
       font-size: -webkit-xxx-large;
+    }
+    .fos_login{
+        margin-top: 2em;
     }
 }
