--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -104,7 +104,7 @@
                                 <i class="fa fa-facebook-official"></i> Login with facebook
                             </a>
                         </div>
-                        <div class="col-md-6 col-md-offset-3">
+                        <div class="col-md-6 col-md-offset-3 fos_login">
                             <div class="row">
                                 <div class="col-md-6">
                                     <a class="btn-default btn btn-edu btn-block btn-lg btn-accueil" href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
