--- a/web/front/less/eduspeak/algolia.less
+++ b/web/front/less/eduspeak/algolia.less
@@ -9,6 +9,7 @@
     .aa-dropdown-menu {
         width: 100%;
         background-color: #fff;
+        color: @eduspeak-base-purple;
         border: 1px solid #999;
         border-top: none;
         .aa-suggestion {
