--- a/web/front/less/bootstrap.less
+++ b/web/front/less/bootstrap.less
@@ -69,3 +69,4 @@
 @import "eduspeak/friends.less";
 @import "eduspeak/porte.less";
 @import "eduspeak/algolia.less";
+@import "eduspeak/match.less";
