--- a/web/front/less/eduspeak/match.less
+++ b/web/front/less/eduspeak/match.less
@@ -1,5 +1,7 @@
-.match {
-    li {
-        list-style: none;
-    }
+.filter{
+	background: #DDDBDB;
+	padding: 10px;
+	.filter-label{
+		text-align: center;
+	}
 }
