--- a/src/EduSpeakBundle/Resources/views/Default/premium.html.twig
+++ b/src/EduSpeakBundle/Resources/views/Default/premium.html.twig
@@ -1,25 +1,55 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="jumbotron">
+<div id="premium">
+    <div class="row row-description">
         <div class="container">
             <h1>Devenez Premium !</h1>
         </div>
     </div>
 
     <div class="container">
-        <!-- Example row of columns -->
-        <div class="row">
-            <div class="col-md-6">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-            </div>
-            <div class="col-md-6">
-                <h2>Heading</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-            </div>
-        </div>
+
+<div class="row col-md-offset-2 col-md-8">
+
+    <table class="table table-borderless">
+    <thead>
+      <tr class="title">
+        <th><h2>Description des fonctionnalités</h2></th>
+        <th><h2>Premium</i></h2></th>
+        <th><h2>Free</i></h2></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="fonctionnalités">
+        <td class="description">Description des fonctionnalités 1</td>
+        <td class="cell"><div><i class="fa fa-check-circle fa-3x"></i></div></td>
+        <td class="cell"><div><i class="fa fa-check-circle fa-3x"></i></div></td>
+      </tr>
+      <tr class="fonctionnalités">
+        <td class="description">Description des fonctionnalités 2</td>
+        <td class="cell"><div><i class="fa fa-check-circle fa-3x"></div></td>
+        <td class="cell"><div><i class="fa fa-check-circle fa-3x"></div></td>
+      </tr>
+      <tr class="fonctionnalités">
+        <td class="description">Description des fonctionnalités 3</td>
+        <td class="cell"><div><i class="fa fa-check-circle fa-3x"></div></td>
+        <td class="cell"><div></td>
+      </tr>
+      <tr class="fonctionnalités">
+        <td class="description">Description des fonctionnalités</td>
+        <td class="cell"><div><i class="fa fa-check-circle fa-3x"></div></td>
+        <td class="cell"></td>
+      </tr>
+      <tr class="fonctionnalités">
+       <td class="txt"></td>
+       <td class="td-button"><a class="btn btn-premium" href="#" role="button">Acheter &raquo;</a></td>
+       <td class="td-button"><a class="btn btn-premium" href="#" role="button">Découvrir &raquo;</a></td>
+    </tr>
+  </tbody>
+</table>
+
+
     </div>
+</div>
 {% endblock %}
