--- a/web/front/less/eduspeak/eduspeak.less
+++ b/web/front/less/eduspeak/eduspeak.less
@@ -101,4 +101,16 @@ img {
     #btnCity{
         text-decoration: none;
     }
+    .thumbnail{
+        //AJOUTER PAR ANTOINE
+        position: relative;
+        //Fin de L'ajout
+        .caption {
+          color: white;
+          position: absolute;
+          top: 45%;
+          left: 0;
+          width: 100%;
+        }
+    }
 }
